<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelFragment"
    android:id="@+id/telaLogin"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/menuGrid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/menuDetalhado"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/red"
        android:background="@color/red">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/ol_xpto"
            android:textColor="#FFECB3"
            android:textSize="11sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_marginTop="62dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textColor="@color/white">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cod_123456789"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="75dp"
            android:textSize="12sp">

        </TextView>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="350dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/configuracao"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck">

        </ImageButton>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/raster"
            android:scaleType="centerInside"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/todo">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp">

        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="center"
            android:contentDescription="@string/todo">

        </ImageView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menuDetalhado"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/menuGrid"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Bulbasaur"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black">

            </TextView>

            <ImageView
                android:id="@+id/bulbassaur"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:src="@drawable/bulbasaur"
                android:contentDescription="@string/app_name">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="151 Mew"
            android:textSize="10sp"
            android:backgroundTint="@color/buttom_trade">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="002 Ivysaur"
            android:textSize="10sp"
            android:layout_gravity="end"
            android:backgroundTint="@color/buttom_trade">

        </Button>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location:"
                android:textColor="@color/black"
                android:textSize="10dp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Via Trade"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:layout_gravity="center">

            </TextView>

        </androidx.cardview.widget.CardView>


    </com.google.android.material.card.MaterialCardView>



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/evolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/menuDetalhado"
        tools:layout_editor_absoluteX="0dp"
        android:backgroundTint="@color/white">

        <TextView
            android:id="@+id/evolutionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/Evoluções"
            android:textColor="@color/black">

        </TextView>


        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/Bulbasaur"
                android:textColor="@color/black">

            </TextView>

            <ImageView
                android:id="@+id/bulbassaurev"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/bulbasaur"
                android:contentDescription="@string/Bulbasaur" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/ivysaur"
                android:textColor="@color/black">

            </TextView>

            <ImageView
                android:id="@+id/ivysaurev"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ivysaur" />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/venosaur"
                android:textColor="@color/black">

            </TextView>

            <ImageView
                android:id="@+id/venosaurev"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/venosaur"
                android:contentDescription="@string/venosaur" />

        </androidx.cardview.widget.CardView>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/evolution"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".acitivy.SkillActivity"
        android:backgroundTint="@color/white">

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black">
        </TextView>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/typeGrass"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/green"
                android:text="@string/grass"
                android:textSize="10dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/typePoison"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/poison"
                android:text="@string/poison"
                android:textSize="10dp"
                tools:ignore="SpUsage">

            </Button>

        </GridLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/card"
        app:layout_constraintTop_toBottomOf="@+id/evolution"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ability"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@color/black">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:textStyle="bold"
                android:layout_marginTop="42dp"
                android:textColor="@color/black">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Classification"
                android:textStyle="bold"
                android:textColor="@color/black">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="42dp"
                android:text="@string/GenderM"
                android:textColor="#00838F">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="42dp"
                android:text="@string/GenderF"
                android:textColor="#D81B60">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Seed"
                android:layout_marginStart="100dp"
                android:textColor="@color/black">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Overgrow"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black">

            </TextView>


        </androidx.cardview.widget.CardView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardweakness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weakness"
            android:textColor="@color/black">
        </TextView>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4">

            <Button
                android:id="@+id/Type_Fire"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/orange_fire"
                android:text="@string/fire"
                android:textSize="10dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/Type_Flying"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/flying_blue"
                android:text="@string/flying"
                android:textSize="10dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/Type_Psychic"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/pink_psychic"
                android:text="@string/psychic"
                android:textSize="10dp"
                tools:ignore="SpUsage,TextContrastCheck" />

            <Button
                android:id="@+id/Type_Ice"
                android:layout_width="85dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/ice"
                android:textSize="10dp"
                tools:ignore="SpUsage" />


        </GridLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vw_Poke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardweakness">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tb_Poke"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>

